# theory_exercises

./: CMakeLists.txt  main.cc  set.cpp
include/: data_types.cc  data_types.h  functions.cc  sort.cc  sort.h
misc/: README.txt  temp_exam.cc
models/: finite_state.cc  finite_state.h  main.cc  pushdown_automata.h
utils/: definitions.h  finite_state_utils.cc  finite_state_utils.h  utility_functions.cc  utility_functions.h  vector_utils.h
